# ICPQuery

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml
.github/workflows/: available-test.yml  build-publish.yml
icpquery/: __init__.py  __main__.py  captcha.py  dto.py  exceptions.py  schema.py  utils.py
tools/: check_or_save_background.py
